Fixing hour edge case with NEXT_N_MONTHS date literal

--- a/rollup/core/classes/RollupDateLiteral.cls
+++ b/rollup/core/classes/RollupDateLiteral.cls
@@ -510,7 +510,7 @@ public without sharing abstract class RollupDateLiteral {
     protected override void setDynamicValue(String num) {
       Integer dateRange = Integer.valueOf(num);
       this.ref = getRelativeDatetime(System.today().toStartOfMonth().addMonths(1), START_TIME);
-      this.bound = this.ref.addMonths(dateRange);
+      this.bound = getRelativeDatetime(this.ref.addMonths(dateRange).date(), END_TIME);
     }
   }
 
