Updating RollupNebulaLoggerAdapter to Nebula Logger 4.8.0 Summer 22 release - thanks to @jongpie's hard work, this allows us to set Apex Rollup as the Log__c.LogScenario__c, as well as successfully repressing rollup logger classes from showing in stacktraces/LogEntry__c.OriginLocation__c fields

--- a/plugins/NebulaLogger/classes/RollupNebulaLoggerAdapter.cls
+++ b/plugins/NebulaLogger/classes/RollupNebulaLoggerAdapter.cls
@@ -1,4 +1,14 @@
 public class RollupNebulaLoggerAdapter extends RollupLogger {
+  public RollupNebulaLoggerAdapter() {
+    super();
+    // prevents duplicating Apex Debug messages
+    // between logger instances
+    Logger.getUserSettings().IsApexSystemDebugLoggingEnabled__c = false;
+    Logger.setScenario('Apex Rollup');
+    Logger.ignoreOrigin(RollupNebulaLoggerAdapter.class);
+    Logger.ignoreOrigin(RollupLogger.class);
+  }
+
   public override void save() {
     Logger.saveLog();
   }
