--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -203,13 +203,13 @@ private class RollupFullRecalcTests {
   static void shouldPerformBulkFullRecalcWithHierarchy() {
     // also validates that RollupRelationshipFieldFinder aborts early if it's called
     // for a top-level parent
-    Rollup.defaultControl = new RollupControl__mdt(ShouldAbortRun__c = true);
+    Rollup.defaultControl = new RollupControl__mdt(ShouldAbortRun__c = true, IsRollupLoggingEnabled__c = true);
 
     Account acc = [SELECT Id FROM Account];
     Account childAccount = new Account(Name = 'Hierarchy child', ParentId = acc.Id, AnnualRevenue = 5);
     insert childAccount;
 
-    Rollup.defaultControl = null;
+    Rollup.shouldRefreshCachedControl = true;
     Rollup.onlyUseMockMetadata = true;
     List<Rollup__mdt> metadata = new List<Rollup__mdt>{
       new Rollup__mdt(
@@ -732,12 +732,9 @@ private class RollupFullRecalcTests {
 
   @IsTest
   static void shouldFilterOnParentFieldsProperlyWhenInvokedFromParent() {
-    Rollup.defaultControl = new RollupControl__mdt(IsRollupLoggingEnabled__c = true, ShouldAbortRun__c = true);
     Account acc = [SELECT Id, AnnualRevenue FROM Account];
     System.assertEquals(null, acc.AnnualRevenue, 'Test has started under wrong conditions');
-
     insert new Contact(LastName = 'Parent field test', AccountId = acc.Id);
-    Rollup.defaultControl = null;
 
     List<Account> accs = new List<Account>{ acc };
     RollupTestUtils.DMLMock mock = RollupTestUtils.loadMock(accs);
